--- a/index.html
+++ b/index.html
@@ -7,22 +7,42 @@
   <script src="javascripts/jquery-2.0.3.js"></script>
 </head>
 <body>
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><!-- Namespace declarations for Firefox to recognize as SVG and not just XML -->
+<h3>The Sandbox</h3>
+<svg width="36em" height="16.5em" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><!-- Namespace declarations for Firefox to recognize as SVG and not just XML -->
 	<g transform="rotate (0 100 100)"><!-- grouping pass attributes to child elements and transform as group -->
 		<svg x="50" y="20"><!-- Nesting SVG can act as a container to group other SVG elements -->
 			<rect x="10" y="0" height="130" width="500" style="fill: #000000"/>
 			<image x="15" y="5" width="300" height="192" xlink:href="images/bg01.jpg" />
 			<line x1="0" y1="80" x2="450" y2="80" style="stroke: #0000ff; stroke-width: 50; stroke-linecap: round; stroke-opacity: 0.2"/>
-			<a xlink:href="http://tutorials.jenkov.com/svg/filters.html"><!-- link syntax -->
+			<a xlink:href="#"><!-- link syntax -->
 				<text x="100" y="90" style="font-size: 30px; fill: #f00; fill-opacity: .5; stroke: #ff0000; stroke-width: 0.5">Here's some text in SVG!</text>
 			</a>
 		</svg>
 	</g>
 </svg>
-<h2>Notes</h2>
+<h4>Notes</h4>
 <dl>
 	<dt>SVG Units:</dt>
 	<dd>If no unit is specified SVG will assume px, using em will be more suited to building rwd elements.</dd>
+</dl>
+<h2>Ideas for further exploration</h2>
+<h4>Defs Element</h4>
+<dl>
+  <dt>
+    <pre>
+    <code>
+      &#60;defs&#62;
+        &#60;g&#62;
+           &#60;rect x="0" y="41" width="60" height="60" /&#62;
+        &#60;/g&#62;
+      &#60;/defs&#62;
+    </code>
+    </pre>
+    This element tells svg to define and element for future use, this could be a good way to preserve images?
+  </dt>    
+  <dd>
+    
+  </dd>
 </dl>
 <footer>
   <script src="javascripts/script.js"></script>
